# youtube-transcriber

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.worker  README.md  alembic.ini  com.sentryclaw.yt-chatbot.plist  com.sentryclaw.yt-worker-audio.plist  com.sentryclaw.yt-worker-diarize.plist  com.sentryclaw.yt-worker.plist  docker-compose.yml  gstack-audit-2026-03-21.md  pyproject.toml
alembic/: env.py
app/: config.py  main.py  telegram_bot.py
docs/: CHAT_FEATURE_PLAN.md  CLARIFICATIONS.md  EMBEDDING_UPGRADE_PLAN.md  PLAN-v2-pipeline.md  PLAN.md  QACLAW_TASK.md  claude-diff-summary.md  claude-plan.md  claude-test-results.txt  stitch-ui-brief.md  user-guide.md
scripts/: alembic_native.sh  backfill_channels.py  download_models.py  reap_hidden_superseded_failed_jobs.py  reap_hidden_superseded_failed_jobs_wrapper.sh  reap_stale_jobs.py  reap_stale_jobs_wrapper.sh  reembed_all.py  rotate_logs.sh  run_ci_tests.sh  run_telegram_bot.py  start_telegram_bot.sh  start_worker.sh  worker_health.sh
tests/: conftest.py  test_agents_router.py  test_alignment.py  test_api_endpoints.py  test_channel_dispatcher.py  test_channel_filters.py  test_channel_persona_ui.py  test_chat.py  test_chat_backend.py  test_chat_toggle.py  test_cleanup_task.py  test_compress_stale_videos.py  test_config.py  test_cost_tracker.py  test_design_system.py  test_device.py  test_diarization.py  test_dismiss.py  test_embedding_service.py  test_feature_smoke.py  test_filler_removal.py  test_hybrid_search.py  test_jobs_retry.py  test_main_lifespan.py  test_morning_digest.py  (+37 more)
(+136 files in other folders)
